content/versioned/2.2/changelog.fr.mdx
---
title: Changelog
description: Notes de version de chaque release de Nucleus, la plus récente en premier.
---

Cette page liste les changements de chaque version de Nucleus, la plus récente en premier.
Chaque entrée recense les nouveaux modules, les fonctionnalités, les corrections de bugs et
les changements incompatibles de la version.

## v2.2.0

**Sortie : 2026-08-03**

### Faits marquants

- **Scaffold de fenêtre et primitives de chrome.** Mises en page plein fenêtre sans abandonner le drag natif, les zones de caption ni les insets des feux de circulation. Composez le contenu via `WindowScaffold` avec `TitleBarPlacement.Docked` ou `Overlay`, et reconstruisez le chrome à partir d'API publiques : `Modifier.windowDragArea` / `noWindowDrag`, `WindowControls`, `windowGlassRegion` (macOS), `WindowsBackdrop` Windows 11 (Mica / Acrylic / MicaAlt), `WindowBackground` et `WindowAppearance`. Voir [Scaffold de fenêtre](/docs/tao/window-scaffold), [primitives de chrome](/docs/tao/window-scaffold#primitives-de-chrome) et [matériaux de plateforme](/docs/tao/window-scaffold#matériaux-de-plateforme-et-apparence).
- **Les tâches GraalVM reflètent le pipeline JVM.** `runGraalvmNative` est la boucle de dev rapide (`-Ob` quick-build) ; l'optimisation configurée vit sur `runGraalvmNativeDistributable`. Les nouvelles tâches `createGraalvmNativeDistributable` et `packageGraalvmNativeDistributionForCurrentOS` correspondent à `createDistributable` / `packageDistributionForCurrentOS`. Le dossier d'app native atterrit sous `compose/binaries/<app>/graalvm-app`. Voir [Tâches & CI — surface publique](/docs/performance/graalvm/tasks-ci#surface-publique-alignée-sur-le-pipeline-jvm) et [emplacements de sortie](/docs/performance/graalvm/tasks-ci#emplacements-de-sortie).
- **Sélection typée du garbage collector.** `garbageCollector = GarbageCollector.Z` sur le chemin JVM et `graalvm { garbageCollector = NativeImageGarbageCollector.G1 }` pour les images natives. G1 est Oracle GraalVM + Linux uniquement et se dégrade avec un avertissement ailleurs. Les flags de pourcentage de tas suivent le collecteur choisi. Voir [Choisir un garbage collector](/docs/performance/graalvm/configuration#choisir-un-garbage-collector) et le [DSL Gradle](/docs/reference/gradle-dsl#application----jvmapplication).

### Nouvelles fonctionnalités

- **`WindowScaffold` + `TitleBarPlacement`** (#412, #129) — hôte de chrome indépendant du design system. `Docked` conserve la barre au-dessus du contenu ; `Overlay` remplit le contenu sur toute la hauteur et renvoie la hauteur mesurée de la barre en `PaddingValues` supérieur. Options `autoHideInFullscreen` et `passThroughToContent` sur `Overlay` pour les barres immersives et le hit-test traversant (#423). Voir [placement de la barre de titre](/docs/tao/window-scaffold#placement-de-la-barre-de-titre).
- **Primitives de chrome pour barres de titre personnalisées** (#412) — `Modifier.windowDragArea` / `noWindowDrag`, `WindowControls` + `WindowControlsRenderer`, `WindowDoubleClickAction`, et `LocalWindowChromeInsets` pour placer le contenu autour des feux de circulation et du padding de bord KDE. Voir [primitives de chrome](/docs/tao/window-scaffold#primitives-de-chrome), [zones de drag](/docs/tao/window-scaffold#zones-de-drag) et [contrôles de fenêtre](/docs/tao/window-scaffold#contrôles-de-fenêtre).
- **Matériaux de plateforme** (#412) — `Modifier.windowGlassRegion` (panneaux sidebar/content/inspector à la System Settings sous macOS), `WindowsBackdrop` (Mica / Acrylic / MicaAlt DWM avec pin de tier), `WindowBackground` (couleur de clear depuis l'arbre de contenu), `WindowAppearance` (force clair/sombre sur les surfaces natives). Voir [matériaux de plateforme](/docs/tao/window-scaffold#matériaux-de-plateforme-et-apparence), [verre macOS](/docs/tao/window-scaffold#régions-de-verre-macos) et [backdrops Windows 11](/docs/tao/window-scaffold#backdrops-windows-11).
- **`DecoratedWindow(transparent = true)` sur Tao** (#419) — transparence plein fenêtre pour les overlays « ghost ». À combiner avec `undecorated = true` pour des fenêtres sans cadre. AWT hors périmètre ; appeler le `DecoratedWindow` Tao (par ex. via `taoApplication`). Voir [overlays transparents](/docs/tao/window-scaffold#overlays-transparents-et-sans-cadre) et [DecoratedWindow sur Tao](/docs/tao/decorated-window#scaffold-et-chrome-22).
- **Ombre portée CSD GTK native** (#422) — les décorations côté client Linux suivent le motif hidden-titlebar pour que l'ombre suive correctement la fenêtre, y compris pendant un déplacement interactif. Voir [Notes DecoratedWindow](/docs/tao/decorated-window#notes).
- **AccessKit sous Windows** (#420) — l'accessibilité Windows partage désormais le chemin filaire AccessKit avec Linux (provider UIA). Crates AccessKit mises à jour sur les deux plateformes ; les sondes AT-SPI Linux ont la même sévérité que sous Windows. Voir [Accessibilité](/docs/tao/accessibility#fonctionnement).
- **`garbageCollector` dans le DSL JVM et native** (#408) — `GarbageCollector` (`SERIAL`, `PARALLEL`, `G1`, `Z`, `SHENANDOAH`, `EPSILON`) pour HotSpot ; `NativeImageGarbageCollector` (`SERIAL`, `G1`, `EPSILON`) pour `--gc=`. Non défini : ergonomie JVM / Serial de native-image. Voir [Choisir un garbage collector](/docs/performance/graalvm/configuration#choisir-un-garbage-collector) et [DSL Gradle — GraalVM](/docs/reference/gradle-dsl#graalvm--graalvmsettings).
- **`NucleusApplicationScope` implémente `ApplicationScope` de Compose** (#372) — les bibliothèques scopées au plain `ApplicationScope` (par exemple ComposeNativeTray) se résolvent dans `nucleusApplication { }` sans jeu de surcharges séparé. Voir [Notes DecoratedWindow](/docs/tao/decorated-window#notes).

### Écosystème (dépôts séparés)

Publiés autour de la ligne 2.2 ; versionnés indépendamment de Nucleus :

- **[compose-macos-26-ui](https://github.com/NucleusFramework/compose-macos-26-ui)** — design system macOS 26 + `MacosDecoratedWindow`. Doc : [toolkit macOS](/docs/window/toolkit-macos).
- **[compose-fluent-ui](https://github.com/NucleusFramework/compose-fluent-ui)** — Fluent Design + `FluentDecoratedWindow`. Doc : [toolkit Fluent](/docs/window/toolkit-fluent).
- **[yaru-compose-ui](https://github.com/NucleusFramework/yaru-compose-ui)** — design system Yaru / GNOME + `YaruDecoratedWindow`. Doc : [toolkit Yaru](/docs/window/toolkit-yaru).

### Améliorations

- **Cohérence du nom de bundle `.app` macOS** (#409) — chaque artefact (DMG, ZIP, …) livre le même nom de bundle dérivé de `appName`, si bien que l'auto-update ne supprime plus un chemin pour échouer à en ouvrir un autre quand `appName != packageName`.
- **Bascule plein écran Windows sans glitch** et parité de rampe de transition plein écran macOS (#412 / #413).
- **Suivi du facteur de scale d'affichage macOS** quand la fenêtre change d'écran (#412). Voir [HiDPI par moniteur](/docs/tao/hidpi).

### Corrections de bugs

- **`setBounds` / resize de NsView sur les changements de layout** (#421) — les vues natives macOS embarquées mettent à jour leurs frames quand le layout Compose change. Voir [Vues natives](/docs/tao/native-views).
- **URI de deep link scheme-only** (#425 / #414) — `DeepLinkHandler` accepte les formes opaques du type `myapp:?query=…` (courantes via `xdg-open`), pas seulement les formes `scheme://` avec autorité. Les chemins de lecteur Windows restent rejetés. Voir [Deep links — fonctionnement](/docs/lifecycle/deep-links#fonctionnement).
- **Le gate hot-reload correspond au nom d'artefact Tao publié** (#424 / #415).

---

## v2.1.10

**Sortie : 2026-07-26**

### Corrections de bugs

- **Résolution des library jars du JDK sur les JDK sans JMOD** (#407) — l'empaquetage ProGuard en release échouait sur les JDK qui ne livrent plus de répertoire `jmods` (Temurin 25+ après JEP 493). La tâche retombe sur l'extraction de l'image runtime avec `jimage extract` et passe une racine de classes par module. Les JDK qui livrent encore `jmods` gardent le chemin précédent.
- **Arrêt du tracing d'ombre CSD pendant le drag de fenêtre** (#393 / #383) — l'ombre de la décoration côté client Linux ne laisse plus de traînée pendant un déplacement interactif.

---

## v2.1.9

**Sortie : 2026-07-26**

### Corrections de bugs

- **Résistance à l'obfuscation pour tous les ponts JNI et les coroutines** (#405) — depuis l'activation par défaut d'`obfuscate = true` en 2.1.6, les builds de release plantaient à l'exécution. L'énumération module par module des règles de conservation JNI est remplacée par des règles génériques qui conservent le nom de toute classe `dev.nucleusframework` déclarant des méthodes natives ainsi que les objets `*Bridge`/`*Jni` dans leur intégralité, ce qui corrige les `UnsatisfiedLinkError` dans les modules oubliés par la liste (autolaunch, launcher-linux, notification-linux/macos, service-management-macos, system-info, taskbar-progress, graalvm-runtime). La suppression d'`allowoptimization` des règles de sûreté `kotlinx.**` corrige un `VerifyError` dans `ChannelsKt.trySendBlocking` ; le shrinking reste pleinement actif. Les builds natifs system-color et media-control invoquent désormais `build.bat` par chemin absolu, comme tous les autres modules.

### CI

- **JDK Microsoft sous Windows, Temurin ailleurs** (#406) — remplace la JBR comme JDK de `setup-nucleus`. Le Microsoft Build of OpenJDK est la seule distribution grand public à publier des builds windows-aarch64 en GA pour les majeures LTS actuelles, et `decorated-window-jbr` n'a pas besoin de JBR au build puisque l'API JBR provient de l'artefact `org.jetbrains.runtime:jbr-api`.

---

## v2.1.8

**Sortie : 2026-07-26**

### Nouvelles fonctionnalités

- **Bloc de configuration `aotCache { }`** (#404) — expose le compromis de portabilité du cache AOT : `compatibility = NATIVE` restaure le comportement par défaut du JDK pour les builds locaux ou les parcs homogènes, et `extraTrainingJvmArgs` sert d'échappatoire pour l'exécution d'entraînement. `enableAotCache` continue de fonctionner comme raccourci.

### Corrections de bugs

- **Cache AOT portable entre CPU par défaut** (#404) — le cache AOT du JDK 25+ stocke aussi du code machine (blobs d'adaptateurs i2c/c2i) généré pour les capacités CPU de la machine d'entraînement, et HotSpot n'enregistre aucune information d'ISA pour cette région avant le JDK 27 : un cache construit sur un runner de CI mourait donc en `EXCEPTION_ILLEGAL_INSTRUCTION`/`SIGILL` sur un CPU plus restreint. Le cache se limite désormais aux métadonnées par défaut (`-XX:-AOTAdapterCaching` sur l'exécution d'entraînement comme sur le lanceur livré), ce qui conserve les gains de chargement et de liaison des classes sans toucher au JIT à l'exécution. `compatibility = NATIVE` émet un avertissement au build si le runtime embarqué est antérieur à la validation des capacités CPU ajoutée après le JDK 26.

---

## v2.1.7

**Sortie : 2026-07-26**

### Changements incompatibles

- **GraalVM Community Edition devient la toolchain par défaut** (#403) — la toolchain provisionnée automatiquement était Oracle GraalVM, régie par les GraalVM Free Terms and Conditions. La GFTC n'autorise la redistribution du programme qu'à condition de ne facturer à vos licenciés aucuns frais liés à cette distribution ou à cet usage, et le plugin copie les bibliothèques du runtime GraalVM à côté de l'exécutable packagé — cette clause atteignait donc silencieusement toute application construite avec Nucleus. GraalVM CE (GPLv2 + Classpath Exception) ne comporte pas cette restriction et devient la valeur par défaut via `GraalvmDistribution.COMMUNITY`. Oracle GraalVM reste disponible derrière une activation explicite qui journalise un avertissement de licence. `-O3`, `--pgo` et `-H:AdvancedObfuscation` se dégradent en avertissement sous une toolchain communautaire, et `runWithPgoInstrument` n'est plus enregistrée du tout. La distribution est intégrée au répertoire d'installation et à la clé de cache CI pour qu'un téléchargement Oracle existant ne soit jamais réutilisé, et un `GRAALVM_HOME` dont la distribution contredit le DSL est ignoré.

### Améliorations

- **Provisionnement paresseux de la toolchain** (#403) — chaque fournisseur de toolchain se résout désormais dans `doFirst`, si bien qu'une synchronisation de l'IDE ou un `gradlew tasks` ne télécharge plus de JDK.

### Corrections de bugs

- **Résistance aux limites de débit de l'API GitHub lors de la résolution de la Community Edition** (#403) — une version épinglée (`"25.0.2"`) construit désormais l'URL de téléchargement directement au lieu de lister les releases, ce qui rend la solution documentée d'épinglage réellement utilisable hors ligne ; les étapes de build d'image native transmettent `GITHUB_TOKEN` pour authentifier l'appel à l'API des releases. Les versions flottantes (`"25"`, `"25i1"`) nécessitent toujours l'API.
- **Décodage du `cpu_type` Mach-O dans l'ordre d'octets du fichier** (#402) — `MH_CIGAM_64` est justement le magic inversé par lequel commence sur disque toute dylib macOS petit-boutiste : `cpu_type` était donc lu inversé et chaque dylib « thin » remontait `arch=UNKNOWN`. Vérification croisée avec `lipo` sur 57 dylibs réelles : 44 étaient mal décodées auparavant, les 57 sont correctes désormais. `FAT_MAGIC_64` est également reconnu en plus de `FAT_MAGIC`, et la fusion chemin + en-tête est remontée dans `NativeLibArchDetector.detectEntry` pour que la transformation de strip en bénéficie aussi.
- **Extraction de la bibliothèque native de l'architecture cible, et non de la première trouvée** (#401) — les bibliothèques natives dont le chemin dans le JAR porte une architecture mais aucun jeton d'OS étaient extraites pour la mauvaise architecture : `detectInfo` écartait l'architecture détectée depuis le chemin dès que l'OS valait `UNKNOWN`, et le tampon d'en-tête de 64 octets était trop petit pour atteindre le champ machine du format PE. Une DLL ARM64 pouvait ainsi gagner la course d'aplatissement sur une cible x64 et échouer au chargement. `detectInfo` fusionne maintenant champ par champ les informations du chemin et de l'en-tête, et lit 4096 octets d'en-tête. Corrige #399.

---

## v2.1.6

**Sortie : 2026-07-23**

### Nouvelles fonctionnalités

- **Obfuscation avancée des images natives** (#389) — `graalvm { advancedObfuscation = true }` passe `-H:AdvancedObfuscation=` (Oracle GraalVM uniquement, conditionné à la toolchain résolue et avertissant sinon) afin d'obfusquer les noms de symboles inscrits dans le binaire : traces d'appels, heap dumps, `Class#getName`, chaînes. Les noms de réflexion et JNI issus des métadonnées d'atteignabilité sont préservés automatiquement, l'option est donc sûre pour JNI par construction. `-H:+UnlockExperimentalVMOptions` l'accompagne, et `--enable-sbom=export` conserve le SBOM comme artefact de build au lieu de l'embarquer et de re-divulguer la liste de dépendances que l'obfuscation masque.
- **Règles ProGuard sûres pour l'obfuscation** (#389) — lorsque `proguard { obfuscate = true }`, un fichier `nucleus-obfuscation-safety-rules.pro` fourni avec le framework est injecté automatiquement pour préserver les noms du framework (`androidx.**`, `kotlinx.**`) tout en laissant le shrinking et l'optimisation actifs, de sorte que les runtimes Compose et Kotlin survivent au renommage et que seuls les paquets de l'application soient obfusqués. Évite le `ClassNotFoundException: androidx.compose.runtime.Composer`. Non injecté quand l'obfuscation est désactivée.
- **Tas maximal par défaut adapté au bureau pour les images natives** (#390) — le Serial GC de native-image fixe le tas maximal à 80 % de la RAM physique, très au-delà de la norme d'une application de bureau. Nucleus inscrit désormais `-R:MaximumHeapSizePercent=25` par parité avec le `MaxRAMPercentage` de HotSpot, configurable via `graalvm { maxHeapSizePercent = N }` ou une valeur absolue `graalvm { maxHeapSize = "2g" }` (prioritaire). Ce ne sont que des valeurs par défaut, toujours surchargeables à l'exécution avec `-Xmx`.
- **`--enable-native-access=ALL-UNNAMED` inscrit dans les images natives** (#390) — les modules natifs appellent `System.loadLibrary` depuis le module sans nom, ce qui depuis le JDK 24 (JEP 472) émet un avertissement de méthode restreinte et sera bloqué dans une version future. Le chemin d'exécution JVM passait déjà l'option ; le binaire natif démarre maintenant proprement lui aussi.
- **Mise en pause de la boucle de rendu quand la fenêtre est minimisée** (#384) — chaque hôte de scène conditionne le corps de sa frame à `window.isMinimized` avant le tick de l'horloge de frames, si bien que les animations Compose se mettent en pause au lieu d'enregistrer et de présenter sur une surface masquée. C'est surtout critique sous Windows, où le swapchain en flip-model d'ANGLE ne signale jamais d'occlusion et n'exerce donc aucune contre-pression vsync pendant la minimisation ; la restauration relance explicitement un redraw.
- **Jewel 0.39 et icônes IntelliJ 262** (#395) — passe Jewel en `0.39.0-262.9437.21`, ajoute les dépendances `intellij-icons-api`/`impl` requises par l'`IntUiTheme` de Jewel 0.39, et enregistre les initialisations au build et les entrées de réflexion nécessaires pour éviter un segfault de `Method.invoke` sous SVM.

### Corrections de bugs

- **Cadrage des références locales JNI sur les threads attachés en permanence** (#387) — les upcalls créant des objets sur des threads attachés en permanence ne dépilaient jamais leur frame locale, fuyant des références locales pendant toute la vie du processus. Le chemin tactile était le pire : `dispatch_touch` allouait trois `long[]` par événement, si bien qu'un glissement tactile prolongé faisait croître la table de références locales JNI jusqu'au débordement et à l'abandon de la JVM. Le corps de chacun de ces upcalls est désormais encapsulé dans `env.with_local_frame(...)`, couvrant les chemins tactile et de dépôt sous Linux, les liens profonds macOS et les trampolines d'actions d'accessibilité macOS/Windows.
- **Purge des exceptions JNI en attente après les upcalls d'accessibilité et de liens profonds** (#385) — les callbacks natif-vers-JVM d'accessibilité et de liens profonds appelaient `NativeTaoBridge.dispatch*` sans `exception_check`/`exception_clear`, contrairement à tous les autres chemins de dispatch. Un gestionnaire Kotlin levant une exception la laissait en attente sur le thread de callback à longue durée de vie (AT-SPI/zbus, UIA, AppKit), rendant l'appel JNI suivant sur ce thread indéfini et, sous `panic = "abort"`, provoquant un abandon du processus dont le site de crash paraissait sans rapport. La garde est désormais appliquée aux 18 sites d'upcall.
- **Migration de `-H:IncludeResources` vers les globs des métadonnées d'atteignabilité** (#389) — l'option dépréciée émettait un avertissement au build ; les motifs d'inclusion de ressources sont passés dans le `reachability-metadata.json` du module, à sémantique identique. Les globs génériques de polices et d'icônes sont volontairement conservés : ils couvrent les ressources embarquées dans les JAR de bibliothèques, comme les icônes SVG de Jewel, que l'`autoIncludeResources` par racine n'atteint pas.

### Améliorations

- **Extraction du glisser-déposer de scène partagé dans `TaoSceneDnD`** (#386) — déduplique les trois hôtes de scène par plateforme en un seul fichier partagé, en préservant le comportement propre à Linux où `has_files` reflète la présence d'une cible `text/uri-list`.
- **Déplacement des métadonnées d'image native propres à Jewel dans `decorated-window-jewel`** (#395) — les initialisations au build et les entrées de réflexion de Jewel ne sont livrées qu'aux consommateurs de Jewel ; `graalvm-runtime` ne conserve que l'initialisation générique de slf4j.

---

## v2.1.5

**Sortie : 2026-07-21**

### Nouvelles fonctionnalités

- **Inclusion automatique des ressources du projet dans l'image native** (#379) — les builds d'image native GraalVM embarquent désormais automatiquement les ressources propres à l'application, pas seulement celles du framework et de Compose.
- **Application des règles ProGuard des dépendances** (#380) — ProGuard applique désormais les règles de conservation `META-INF/proguard` livrées dans les JAR de dépendances, si bien que les bibliothèques fournissant leurs propres règles fonctionnent sans configuration manuelle.

### Corrections de bugs

- **Durcissement issu de l'audit de Tao** (#378) — corrections de mémoire native et de cycle de vie, couverture de tests étendue, refactorisation de l'hôte de fenêtre et journalisation améliorée dans le backend Tao.
- **Réimplémentation de l'ombre portée CSD Linux via une sous-surface `wl_shm` dédiée** (#381, #382) — remplace l'ombre portée de la décoration côté client de la 2.1.0 par une sous-surface Wayland qui s'affiche correctement.

---

## v2.1.4

**Sortie : 2026-07-19**

### Corrections de bugs

- **Application des surcharges de couleur `TitleBarStyle` aux boutons de légende** (#377) — le backend Tao respecte désormais les surcharges de couleur de la barre de titre sur les boutons de contrôle (caption) de la fenêtre.

### CI

- **Mise en cache des builds natifs, fusion des artefacts par plateforme et annulation des exécutions obsolètes** (#375).
- **Infrastructure de tests Tao à paliers** (#373) — un harnais de scène hors écran plus une suite de fenêtres « headful » pour `decorated-window-tao`.

---

## v2.1.3

**Sortie : 2026-07-18**

### Corrections de bugs

- **Chargement de GTK avec `RTLD_LOCAL` sous Linux** (#368) — empêche l'interposition des symboles GTK d'écraser SQLite dans le backend Tao.
- **Possession des répertoires `app`/`runtime` dans les paquets RPM** (#369) — le launcher jpackage trouve désormais son fichier `.cfg`.
- **Exécution du hook de clic extérieur Windows sur un thread natif dédié** (#370) — le hook souris bas niveau `WH_MOUSE_LL` ne partage plus de thread, corrigeant la détection manquée des clics extérieurs.

---

## v2.1.2

**Sortie : 2026-07-17**

### Corrections de bugs

- **Libération de la mémoire native du redimensionnement sous Windows** (#365) — le backend Tao libère la mémoire native allouée pour un glissement de redimensionnement à la fin du glissement.

---

## v2.1.1

**Sortie : 2026-07-17**

### Corrections de bugs

- **Utilisation d'un `@argfile` sous Windows pour la compilation d'image native** (#364) — évite la limite de longueur de ligne de commande Windows lors des builds natifs GraalVM.

---

## v2.1.0

**Sortie : 2026-07-17**

### Faits marquants

- **Oracle GraalVM est désormais la toolchain recommandée et par défaut.** Nucleus la télécharge et la met en cache automatiquement (`toolchain { }` — Innovation par défaut, `channel = GraalvmChannel.LTS` pour la LTS), et le backend Tao (par défaut) compile les images natives avec. Oracle GraalVM (l'édition auparavant appelée Enterprise) débloque les fonctionnalités avancées d'image native sur lesquelles Nucleus s'appuie — Profile-Guided Optimization, `-O3`, et les profils inférés par ML — que les éditions Community ne fournissent pas. Seul le backend AWT, déprécié, nécessite encore une installation locale de BellSoft Liberica NIK. Aucune étape `setup-graalvm` ; `GRAALVM_HOME` reste prioritaire.
- **Compose Hot Reload fonctionne d'emblée.** Appliquez le plugin `org.jetbrains.compose.hot-reload` et lancez `hotRun` ; Nucleus résout le point d'entrée depuis `nucleus.application.mainClass`, sans configuration `ComposeHotRun`. `hotDev` sans `-PclassName` se comporte comme `hotRun`. Le hot reload n'était pas fonctionnel en 2.0.
- **Profile-Guided Optimization intégrée.** Enregistrez un profil avec `runWithPgoInstrument`, committez-le, et les builds natifs ultérieurs l'appliquent automatiquement (`--pgo`). Oracle GraalVM uniquement.

### Nouvelles fonctionnalités

- **Compose Hot Reload sur le backend Tao.** Le sidecar dev-tools du Hot Reload suit désormais les fenêtres pilotées par Tao, pas seulement AWT, via un pont réflexif piloté par les callbacks de fenêtre Tao.
- **`march` et `optimization` type-safe.** `march` est désormais `NativeImageMarch` (`NATIVE` / `COMPATIBILITY`) avec un défaut par plateforme ; `optimization` est `NativeImageOptimization` (`QUICK_BUILD`, `NONE`, `LEVEL_1`..`LEVEL_3`, `SIZE`). Nouveaux toggles `allCharsets` et `mlProfileInference`.
- **Oracle GraalVM sous macOS.** Les images natives du backend Tao (par défaut) se construisent sur Oracle GraalVM sous macOS (arm64) ; le backend AWT, déprécié, nécessite encore BellSoft Liberica NIK. Les Mac Intel retombent sur Liberica NIK.
- **`CompressionLevel.Ultra`.** Nouveau niveau de compression qui recompresse en plus le DMG macOS en LZMA (ULMO, ~20 % plus petit) et le `.deb` Linux avec `xz -9e` (~25 % plus petit). `Maximum` n'exécute plus ces étapes de post-traitement.
- **Couleur de clear thématisée et ombre portée CSD Linux.** Les hôtes Tao peignent une couleur de clear thématisée ; les fenêtres décorées Linux reproduisent l'ombre portée de la décoration côté client GTK.

### Améliorations

- **Images natives plus petites.** `optimization = NativeImageOptimization.SIZE` (`-Os`) plus le stripping automatique de l'exécutable sous Linux et macOS récupèrent des dizaines de Mo.
- **`--enable-native-access=ALL-UNNAMED` par défaut.** Ajouté aux arguments JVM par défaut (tâche run et launcher empaqueté) pour que l'accès natif JNI sous JDK 24+ (JEP 472) n'émette plus d'avertissement.
- **Téléchargement automatique de la toolchain GraalVM** supprime l'installation manuelle de NIK auparavant requise pour les builds natifs.
- **Reachability metadata repository** — version par défaut passée à `1.1.4` (depuis `0.10.6`).
- **ProGuard** — version par défaut passée à `7.9.1`.

### Corrections de bugs

- **Alignement de la version de Compose Hot Reload avec la release livrée avec Compose** et durcissement du pont Tao — un écart de version arrête désormais le sidecar pour cette fenêtre au lieu de crasher l'application.
- **Suppression de l'ombre native sur les panneaux popup macOS** dans le backend Tao.

---

## v2.0.7

**Sortie : 2026-07-14**

### Corrections de bugs

- **`march` par défaut en compatibilité pour des binaires portables** (#344) — les images natives GraalVM ciblent désormais un CPU de base par défaut au lieu de la machine de build, si bien que les binaires distribués s'exécutent sur du matériel plus ancien.

---

## v2.0.6

**Sortie : 2026-07-14**

### Corrections de bugs

- **Intégration de `libjsound` dans l'image native** (#341) — Java Sound fonctionne désormais dans les builds d'image native GraalVM.
- **Exécution des toasts WinRT Windows sur un thread MTA dédié** (#342) — corrige la livraison des notifications sous Windows.

---

## v2.0.5

**Sortie : 2026-07-14**

### Corrections de bugs

- **`Dispatchers.Main` fonctionne sans boucle Tao active** (#337) — le dispatch principal des coroutines ne nécessite plus une boucle d'événements Tao active.

---

## v2.0.4

**Sortie : 2026-07-13**

### Corrections de bugs

- **`cleanupNativeLibs` fonctionne pour les projets Kotlin Multiplatform** (#335).

---

## v2.0.3

**Sortie : 2026-07-13**

### Nouvelles fonctionnalités

- **`dockIconFollowsWindows`** (#334) — contrôle la visibilité de l'icône du dock pour les apps de barre de menu / tray sous macOS.

---

## v2.0.2

**Sortie : 2026-07-13**

### Corrections de bugs

- **Application de `org.jetbrains.compose` aux côtés de Nucleus** (#331) — le plugin Nucleus n'entre plus en conflit quand le plugin JetBrains Compose est appliqué au même projet.

---

## v2.0.1

**Sortie : 2026-07-13**

### Corrections de bugs

- **Feux de circulation pré-Tahoe + règles ProGuard du menu macOS** (#310) — corrige les boutons feux de circulation de fenêtre sous les versions de macOS antérieures à Tahoe et ajoute les règles ProGuard manquantes pour le menu macOS.

---

## v2.0.0

**Sortie : 2026-05-14**

### Faits marquants

- **Renommage du plugin et du namespace.** `id("dev.nucleusframework")`, groupe Maven `dev.nucleusframework`, racine Kotlin `dev.nucleusframework.*`. Voir [migrer depuis 1.x](/docs/migrate/from-1.x).
- **Point d'entrée parapluie `nucleusApplication { }`.** Lock single-instance, livraison des deep-links, init GraalVM, entraînement AOT, priming AutoLaunch et AUMID — tout est automatique.
- **Backend Tao (`decorated-window-tao`).** Chemin sans AWT piloté par la crate Rust `tao`. Wayland natif, multi-touch, pression et inclinaison du stylet, popups natifs, drag-and-drop avec diagnostics, `NativeView` embarqué pour tout `NSView` / `HWND` / `GtkWidget`.
- **`DecoratedWindow` / `DecoratedDialog` comme extensions de `NucleusApplicationScope`** — dispatch indépendant du backend, `MaterialDecoratedWindow` et `JewelDecoratedWindow` suivent le même schéma. CompositionLocals pontés à travers la frontière de scène Tao.
- **Liquid Glass macOS via patch `vtool`.** `LC_BUILD_VERSION` fixé au SDK 26 sur le launcher pour que n'importe quel JDK puisse activer Liquid Glass au runtime — plus besoin d'un JDK compilé avec Xcode 26. Répertoires `.icon` en couches pris en charge sur macOS 26+.
- **GraalVM Native Image : alpha.** Analyseur de bytecode statique pour les métadonnées de réflexion, `CleanupGraalvmMetadataTask`, métadonnées L1 par bibliothèque avec filtrage conditionnel au classpath. Pipeline d'empaquetage de bout en bout (DMG, NSIS, DEB) pour les images natives.

---

## v1.11.0

**Sortie : 2026-04-13**

### Nouveaux modules

- **Notification Common** (`nucleus.notification-common`) — API de notification multiplateforme unifiée pour Linux, Windows et macOS derrière un seul DSL. Prend en charge les callbacks par notification, jusqu'à 5 boutons d'action, les pièces jointes image et la gestion du rejet.

### Nouvelles fonctionnalités

- **Disposition réactive des boutons de titlebar GNOME** — Les fenêtres décorées sous Linux lisent désormais `org.gnome.desktop.wm.preferences` → `button-layout` via GSettings (`libgio` dlopen) pour déterminer quels boutons afficher et de quel côté. La disposition se met à jour de façon réactive quand l'utilisateur la change dans GNOME Tweaks ou via `gsettings set`. Retombe sur la disposition par défaut sous KDE et les autres environnements de bureau. Nouveau composable `rememberLinuxButtonLayout()` pour un accès direct.
- **Métadonnées de reachability GraalVM pour FileKit et dbus-java** — Les applications qui utilisent FileKit sous Linux n'ont plus besoin d'entrées de reachability manuelles pour les dialogues de fichiers xdg-desktop-portal. Inclut de nouvelles métadonnées conditionnelles pour dbus-java et des internes du JDK Linux (`UnixSystem`, `NativePRNG$NonBlocking`, `CollationData`).
- **Politiques de raccourci pour les notifications Windows** — Nouvel enum `ShortcutPolicy` sur `WindowsNotificationCenter` pour un contrôle plus fin de la création du raccourci dans le menu Démarrer.
- **Propriétés `NucleusApp.appName` et `NucleusApp.aumid`** — Exposent le nom de l'application et l'AUMID pour faciliter la configuration.

### Corrections de bugs

- **Correction de la couleur d'accentuation multicolore macOS** — `system-color` renvoie désormais `null` quand macOS est en mode multicolore, au lieu de renvoyer par erreur le bleu par défaut.
- **Correction des builds incrémentaux dans les tâches GraalVM** — Désactive le suivi d'état sur les modifications du répertoire de sortie partagé pour éviter les builds obsolètes.
- **Correction de la sûreté au null dans les tâches d'application JVM** — Simplifie la gestion du classpath runtime et des arguments `JavaExec` en supprimant le chaînage optionnel superflu.

### Améliorations

- **Chargement plus rapide des bibliothèques natives** — `NativeLibraryLoader` utilise désormais des empreintes CRC-32 pour valider le cache, éliminant les I/O inutiles lors des vérifications.

### Documentation

- **Statut GraalVM passé en alpha** — La prise en charge de GraalVM Native Image est désormais étiquetée « alpha » au lieu d'« expérimentale », reflétant les métadonnées de reachability centralisées désormais livrées par défaut.
- **Nouvelle documentation System Tray** — Section de documentation complète pour ComposeNativeTray avec captures d'écran et GIFs de démo.
- **Réécriture de la landing page** — Repositionne Nucleus comme un successeur natif d'Electron, avec des comparaisons de performances.

---

## v1.10.0

**Sortie : 2026-04-12**

### Nouveaux modules

- **System Info** (`nucleus.system-info`) — Module d'informations système multiplateforme avec des implémentations natives JNI pour Linux, Windows et macOS. Expose en temps réel les métriques CPU, mémoire et GPU.
    - **Détection GPU et métriques en direct** — Température, utilisation, VRAM, fréquences, consommation et vitesse des ventilateurs sur toutes les plateformes
    - **macOS** : IOKit et SMC pour les métriques GPU, prise en charge d'Apple Silicon et des GPU dédiés
    - **Windows** : DXGI pour l'énumération des GPU, NVIDIA NVML + AMD ADL2 + Intel IGCL pour les métriques en direct, capteurs de zone thermique WMI, données de performance pour la fréquence CPU en temps réel
    - **Linux** : prise en charge des GPU NVIDIA NVML, AMD et Intel
    - Inclut une application de démo (`system-info-demo`) avec des graphiques lets-plot pour l'historique de température CPU

### Corrections de bugs

- **Correction de `latest.yml` non généré pour les formats MSI et Portable** — La génération du YML était limitée à NSIS ; elle couvre désormais aussi les installeurs MSI et Portable
- **Correction de la précision de `releaseDate` dans `latest.yml`** — Utilise une précision à la milliseconde pour correspondre au format electron-builder attendu par l'auto-updater

### CI

- **Ajout des builds natifs `system-info` à la CI** — Compile, vérifie et téléverse les artefacts natifs pour toutes les plateformes dans les workflows `build-natives`, `pre-merge`, `publish-maven`, `publish-plugin`, `test-packaging` et `test-graalvm`
- **Ajout d'une étape de configuration MSVC pour les builds natifs Windows** — Garantit la disponibilité du compilateur Visual Studio en CI pour la compilation JNI Windows

---

## v1.9.1

**Sortie : 2026-04-10**

### Corrections de bugs

- **Correction de la corruption de l'image de fond DMG** — Préserve le fond TIFF octet par octet au lieu de le réencoder ; ajuste la taille de la fenêtre DMG à celle de l'image plutôt que de rembourrer l'image

---

## v1.9.0

**Sortie : 2026-04-09**

### Nouvelles fonctionnalités

- **`controlButtonIconColor` / `controlButtonIconHoverColor`** — Nouvelles propriétés de style sur `DecoratedWindow` pour personnaliser la couleur des icônes des boutons de contrôle de fenêtre (fermer, réduire, agrandir) et leur état survolé
- **`titleBarClickable`** — Nouvelle propriété qui corrige la gestion des clics en mode plein écran macOS, en gardant les boutons de la barre de titre interactifs

### Corrections de bugs

- **Correction de la latence de redimensionnement des fenêtres décorées sous macOS** — Retire `presentsWithTransaction` qui provoquait une latence visible pendant le redimensionnement sous macOS
- **Correction des clics sur la barre de titre plein écran sur les écrans macOS sans notch** — Les boutons de la barre de titre ne répondaient pas en plein écran sur les Mac sans notch
- **Correction des crashs sous macOS &lt; 26 pendant le redimensionnement et le drag** — Protège contre les API Liquid Glass indisponibles sur les versions plus anciennes de macOS
- **Correction du scaling DPI pour la taille min/max de fenêtre sous Windows** — Applique un scaling DPI par axe aux contraintes `minSize`/`maxSize`, et libère les ressources à la fermeture de la fenêtre
- **Correction des fichiers de lock obsolètes dans SingleInstanceManager** — Détecte et nettoie les fichiers de lock orphelins laissés par des instances précédentes ayant crashé
- **Correction de l'auto-destruction de l'image de fond DMG** — Empêche l'écrasement de l'image de fond pendant la phase de copie `dmg-assets`
- **Correction de l'avertissement AppImage + compression Maximum** — Retire le niveau de compression `Fast` invalide et avertit quand `Maximum` est utilisé avec AppImage (non pris en charge par `mksquashfs`)
- **Suppression de l'API `TitleBarIcons` inutilisée** — Nettoie une API dépréciée de `decorated-window`

---

## v1.8.8

**Sortie : 2026-03-31**

### Corrections de bugs

- **Correction de la détection RTL sous macOS** — Utilise `NSLocale` au lieu de `NSApplication` pour détecter le sens de la mise en page, ce qui fonctionne correctement dans les contextes headless et au démarrage précoce

### CI

- **Ajout de la vérification native Linux manquante pour `decorated-window-core`** — Garantit que les fichiers `.so` Linux sont vérifiés dans les workflows CI

---

## v1.8.7

**Sortie : 2026-03-30**

### Nouvelles fonctionnalités

- **Titres localisés des menus Window/Help** — Les menus natifs macOS affichent désormais des titres localisés selon la locale système, avec une correction de l'initialisation de la locale système sous GraalVM
- **Détection native du sens de mise en page sous Linux** — Détecte le sens RTL/LTR sous Linux via Pango JNI, remplaçant l'approche AWT `ComponentOrientation` qui échouait dans les builds d'image native

### Corrections de bugs

- **Gestion en douceur des bibliothèques natives manquantes** — Les modules runtime ne crashent plus quand une bibliothèque native est indisponible pour la plateforme courante ; ils retombent silencieusement en repli

### CI

- **Désactivation de ktlint pour `plugin-build`** — Exempte plugin-build des nouvelles règles ktlint pour éviter les fausses violations

---

## v1.8.6

**Sortie : 2026-03-30**

### Corrections de bugs

- **Correction du crash de la méthode d'entrée macOS en image native GraalVM** — Ajoute les entrées de réflexion manquantes pour les classes de méthode d'entrée macOS aux métadonnées de plateforme

---

## v1.8.5

**Sortie : 2026-03-30**

### Améliorations

- **CI : étapes de build natif menu-macos** — Ajoute le build et la vérification de la bibliothèque native menu-macos à tous les workflows CI

---

## v1.8.4

**Sortie : 2026-03-30**

### Nouvelles fonctionnalités

- **Documentation Native Access** — Guide de l'API Nucleus Native Access couvrant les détails de cycle de vie, les types pris en charge et les fonctionnalités non prises en charge

### Corrections de bugs

- **Correction du crash de génération de fond DMG** — Vérifie la valeur de retour de `ImageIO.write` pour éviter une `FileNotFoundException` quand le format d'image n'est pas pris en charge

---

## v1.8.3

**Sortie : 2026-03-30**

### Corrections de bugs

- **Correction du nommage des artefacts** — Rétablit le `packageName` de l'exemple à sa forme simple pour des noms d'artefacts d'installeur propres

---

## v1.8.1

**Sortie : 2026-03-30**

### CI

- **Ajout des artefacts natifs `global-hotkey` aux workflows de publication** — Télécharge les bibliothèques natives global-hotkey et installe `libglib2.0-dev` dans les pipelines CI de publication de plugin et de publication Maven

---

## v1.8.0

**Sortie : 2026-03-28**

### Nouveaux modules

- **Notification macOS** (`nucleus.notification-macos`) — Mapping complet de l'API UserNotifications via JNI. Prend en charge les notifications riches avec titre, sous-titre, corps, son, badge, catégories avec actions et planification de la livraison. Sûreté des threads avec dispatch EDT pour les callbacks de delegate.

- **Notification Linux** (`nucleus.notification-linux`) — Mapping complet de l'API freedesktop Desktop Notifications via JNI (D-Bus `org.freedesktop.Notifications`). Prend en charge les actions de notification, les icônes, les niveaux d'urgence et l'expiration.

- **Notification Windows** (`nucleus.notification-windows`) — API complète Windows Toast Notifications via JNI (WinRT). Templates de toast riches avec texte, images, boutons et audio.

- **Launcher Linux** (`nucleus.launcher-linux`) — Mapping complet de l'API Unity Launcher via JNI (`com.canonical.Unity.LauncherEntry` + `com.canonical.dbusmenu`). Compteur de badge, barre de progression, indicateur d'urgence et menus quicklist avec prise en charge des menus D-Bus. Compatible avec GNOME, KDE Plasma et les autres environnements de bureau.

- **Launcher macOS** (`nucleus.launcher-macos`) — API de menu Dock via JNI. Éléments de menu contextuel Dock personnalisés avec callbacks natifs. Nécessite l'entitlement `CRITICAL_ALERT` pour certaines fonctionnalités de notification.

- **Launcher Windows** (`nucleus.launcher-windows`) — API Windows Launcher via JNI (WinRT/COM). Notifications de badge, Jump Lists (`ICustomDestinationList`), icônes overlay et boutons de barre d'outils miniature (`ITaskbarList3`) sur la barre des tâches.

- **Freedesktop Icons** (`nucleus.freedesktop-icons`) — Constantes typées pour la freedesktop Icon Naming Specification. Dépendance partagée entre `notification-linux` et `launcher-linux`.

- **Global Hotkey** (`nucleus.global-hotkey`) — Enregistrement de raccourcis clavier globaux multiplateforme.
    - **Windows** : hook clavier bas niveau
    - **macOS** : API Carbon (`RegisterEventHotKey`)
    - **Linux** : capture de touches X11 + portail Wayland (`org.freedesktop.portal.GlobalShortcuts`)
    - Enregistrement/désenregistrement thread-safe avec init synchronisée

- **Menu macOS** (`nucleus.menu-macos`) — API native de barre de menu macOS via JNI. Inclut les métadonnées de reachability GraalVM pour les callbacks JNI.

- **SF Symbols** (`nucleus.sf-symbols`) — Module d'intégration des SF Symbols d'Apple.

### Corrections de bugs

- **Correction du gel de l'UI sur les raccourcis globaux sous Linux** — Rend la liaison au portail non bloquante pour éviter de geler le thread UI sous Wayland, puis dispatche sur `Dispatchers.IO`
- **Correction du crash `Dispatchers.Main` dans l'exemple** — Ajoute la dépendance `coroutines-swing` pour la prise en charge de `Dispatchers.Main` sur desktop

### CI

- **Ajout des builds natifs `global-hotkey` à la CI** — Compile, vérifie et téléverse les artefacts natifs pour toutes les plateformes dans tous les workflows CI

---

## v1.7.2

**Sortie : 2026-03-25**

### Nouvelles fonctionnalités

- **Métadonnées JNI Webview, JNA et SQLite** — Ajoute les métadonnées de reachability GraalVM manquantes pour les classes JNI webview, JNA et SQLite à L1
- **Métadonnées `Companion.serializer()` pour les classes `@Serializable`** — L'analyseur statique émet désormais automatiquement des entrées de réflexion pour les méthodes `Companion.serializer()` de kotlinx.serialization

### Corrections de bugs

- **Correction des entrées proxy dans la tâche `cleanupGraalvmMetadata`** — Gère les entrées de configuration proxy qui pouvaient faire échouer la tâche de nettoyage

---

## v1.7.1

**Sortie : 2026-03-25**

### Nouvelles fonctionnalités

- **Métadonnées de bibliothèque L1 étendues** — Entrées supplémentaires capturées par l'agent pour les bibliothèques courantes
- **Métadonnées GraalVM FileKit** — Ajoute les métadonnées de reachability pour FileKit avec les entrées JDK/JNA complètes

### Corrections de bugs

- **Correction de la sérialisation du configuration cache pour `nativeImageCompile`** — Résout les erreurs de sérialisation quand le configuration cache Gradle est activé, en construisant les arguments native-image au moment de l'exécution

---

## v1.7.0

**Sortie : 2026-03-24**

### Nouvelles fonctionnalités

- **Analyseur de bytecode statique pour les métadonnées de réflexion GraalVM** — Nouvelle `AnalyzeStaticMetadataTask` qui scanne le bytecode compilé pour détecter automatiquement les classes nécessitant une configuration de réflexion, JNI et ressources. Élimine l'essentiel de l'écriture manuelle des métadonnées :
    - Détection des callbacks JNI — trouve les méthodes natives et leurs types de paramètres/retour
    - Analyse des ressources — détecte les appels `getResource`/`getResourceAsStream`
    - Wrappers de chargement de classe — identifie les patterns `Class.forName`, `MethodHandles.Lookup.findClass`
    - Résolution des superclasses JNI — inclut les classes parentes nécessaires à l'accès aux champs
    - Entrées de classe enrichies — ajoute les méthodes et champs non natifs aux métadonnées de classe JNI

- **`CleanupGraalvmMetadataTask`** — Nouvelle tâche Gradle qui retire de votre `reachability-metadata.json` manuel les entrées déjà couvertes par les métadonnées de bibliothèque Nucleus (L1/L2/L3). Garde la config manuelle minimale.

- **Prise en charge des associations de fichiers pour l'image native GraalVM sous macOS** — Enregistre les associations de type de fichier dans le bundle `.app` de l'image native pour que macOS ouvre les fichiers avec votre application.

- **Patch de la target de déploiement et de la version du SDK macOS** — Patche automatiquement la target de déploiement Mach-O et la version du SDK dans les binaires d'image native GraalVM pour la compatibilité Liquid Glass macOS.

- **Métadonnées L1 par bibliothèque** — Découpe le fichier de métadonnées L1 monolithique en fichiers par bibliothèque avec filtrage conditionnel, pour n'inclure que les métadonnées pertinentes selon les dépendances réelles du classpath.

- **Métadonnées GraalVM JNA** — Ajoute les exigences JNI de base de JNA aux métadonnées L1.

- **Métadonnées de drag-and-drop AWT et de handler d'ouverture de fichier** — Ajoute les métadonnées de reachability GraalVM pour les classes de drag-and-drop AWT et les handlers d'ouverture de fichier macOS.

- **Métadonnées de ressources Ktor CIO, SLF4J et JDK courantes** — Entrées L1 supplémentaires pour le moteur Ktor CIO, SLF4J et les classes internes du JDK couramment utilisées.

### Corrections de bugs

- **Correction de la duplication des métadonnées de l'agent** — Déduplique la sortie de l'agent de tracing par rapport au Oracle Reachability Metadata Repository et aux résultats de l'analyse statique
- **Correction de la sérialisation du configuration cache dans `runWithNativeAgent`** — Résout les erreurs de sérialisation Gradle quand le configuration cache est activé
- **Correction du pattern de ressources Aqua LAF** — Ajoute un pattern glob pour les ressources du Look-and-Feel Aqua afin d'éviter la duplication par l'agent sous macOS
- **Correction de la version de fichier de classe non prise en charge dans `NativeMethodDetector`** — Gère en douceur les versions de fichier de classe plus récentes au lieu de crasher
- **Correction des faux positifs de `JarResourceDetector`** — Restreint la correspondance de chemins pour éviter de détecter des ressources sans rapport

### Changements incompatibles

- **Répertoire de config GraalVM par défaut modifié** — Le répertoire par défaut des métadonnées GraalVM manuelles est désormais `graalvm/` au lieu de `resources/`. Les projets existants doivent déplacer leur `reachability-metadata.json` vers le nouvel emplacement.

---

## v1.6.5

**Sortie : 2026-03-23**

### Nouvelles fonctionnalités

- **Prise en charge des associations de fichiers pour l'image native GraalVM sous macOS** — Enregistre les associations de type de fichier (`CFBundleDocumentTypes`) dans le bundle `.app` de l'image native GraalVM

### Corrections de bugs

- **Correction des violations ktlint dans `configureGraalvmApplication.kt`**

---

## v1.6.4

**Sortie : 2026-03-23**

### Corrections de bugs

- **Correction de la récursion infinie dans le transfert d'événements souris en plein écran** — Évite un stack overflow lors du transfert des événements souris en mode plein écran de fenêtre décorée

---

## v1.6.2

**Sortie : 2026-03-22**

### Nouvelles fonctionnalités

- **Propriété `appName`** — Nouvelle propriété de premier niveau dans `nativeDistributions {}` pour le nom d'affichage lisible de l'application (titre de l'installeur, `Name` du `.desktop`, entrée du menu Démarrer). Sépare le nom d'affichage du `packageName`, qui reste l'identifiant technique utilisé pour le nommage de l'exécutable et des fichiers de package.

```kotlin
nativeDistributions {
    appName = "My App"            // Nom d'affichage (installeur, .desktop, menu Démarrer)
    linux { packageName = "myapp" }     // Technique : exécutable, nom du fichier .deb
    windows { packageName = "MyApp" }   // Technique : nom du .exe, MSI
}
```

### Corrections de bugs

- **Correction de l'échec du build MSI avec WiX `LGHT0094: File:mainExecutable not found`** — Le chemin d'empaquetage JVM définit désormais `executableName` sur la tâche electron-builder, comme le faisait déjà le chemin GraalVM. Sans cela, electron-builder retombait sur un nom en minuscules incohérent issu de `package.json`, ce qui faisait échouer WiX.
- **Correction du fichier .deb Linux et du launcher utilisant le nom de projet Gradle au lieu de `linux.packageName`** — `executableName` se résout désormais vers le `packageName` spécifique à la plateforme (`linux.packageName`, `windows.packageName`, `macOS.packageName`) au lieu du nom de projet Gradle.
- **Correction de `productName` absent dans le YAML electron-builder** — Quand aucun `packageName` de premier niveau n'était défini, `productName` était omis de la config générée. Il retombe désormais sur `appName`, puis `packageName`, puis `executableName`.
- **Correction du champ `name` de `package.json` ignorant le nom de package spécifique à la plateforme** — Le `package.json` généré utilise désormais `executableName` (spécifique à la plateforme) pour le champ `name`, afin que la variable `${name}` du template de nom d'artefact se résolve correctement.

## v1.6.0

**Sortie : 2026-03-22**

### Nouveaux modules

- **Taskbar Progress** (`nucleus.taskbar-progress`) — Barre de progression de barre des tâches/dock native et demandes d'attention sur toutes les plateformes. Affiche la progression d'un téléchargement, l'état d'un build ou toute opération longue directement dans la barre des tâches de l'OS. Voir [Taskbar Progress](/docs/lifecycle/taskbar-progress).
    - **Windows** : `ITaskbarList3` (valeur/état de progression) + `FlashWindowEx` (attention)
    - **macOS** : `NSDockTile` avec overlay `NSProgressIndicator` personnalisé + `NSApplication.requestUserAttention`
    - **Linux** : D-Bus `com.canonical.Unity.LauncherEntry` (GNOME, KDE Plasma et environnements compatibles)
    - Cinq états : `NO_PROGRESS`, `INDETERMINATE`, `NORMAL`, `ERROR`, `PAUSED`
    - Demandes d'attention : `INFORMATIONAL` (bref flash) et `CRITICAL` (jusqu'au focus)

- **Métadonnées d'application au runtime** (`NucleusApp`) — Nouveau singleton dans `core-runtime` qui expose au runtime les métadonnées injectées par le plugin : `appId`, `version`, `vendor`, `description`. Alimenté via des propriétés système et une ressource classpath `nucleus-app.properties` générée. Voir [API runtime](/docs/lifecycle/app-metadata).

### Nouvelles fonctionnalités

- **Métadonnées d'image native GraalVM centralisées** — Nucleus livre désormais toutes les métadonnées de réflexion génériques et spécifiques à la plateforme prêtes à l'emploi, organisées en trois niveaux :
    - **L1 (JAR graalvm-runtime)** — Entrées de réflexion génériques multiplateforme pour Compose Desktop, AWT/Swing, Skiko, les fournisseurs de sécurité, les gestionnaires de polices, et plus (~300+ types). Récupérées automatiquement depuis le classpath par native-image.
    - **L2 (Oracle Reachability Metadata Repository)** — Résolution automatique des métadonnées pour toutes les dépendances du classpath runtime depuis le [Oracle GraalVM Reachability Metadata Repository](https://github.com/oracle/graalvm-reachability-metadata). Couvre les bibliothèques populaires comme ktor, kotlinx.serialization, SLF4J, Logback et bien d'autres. Activé par défaut.
    - **L3 (métadonnées de plateforme du plugin)** — Métadonnées AWT/Java2D/police/sécurité spécifiques à la plateforme pour macOS, Windows et Linux, livrées à l'intérieur du plugin Gradle. Écrites dans le répertoire de build à la compilation — aucun bloc `when` par plateforme nécessaire dans votre script de build.

    Vous n'avez plus besoin de copier des milliers d'entrées de réflexion depuis l'application d'exemple. La plupart des applications fonctionneront sans aucune configuration de réflexion manuelle. Voir [Métadonnées de réflexion centralisées](/docs/performance/graalvm#centralized-reflection-metadata).

- **DSL `metadataRepository {}`** — Nouveau bloc de configuration dans `graalvm {}` pour contrôler l'intégration du Oracle Reachability Metadata Repository. Prend en charge `enabled`, `version`, `excludedModules` et `moduleToConfigVersion`. Activé par défaut avec la version `0.10.6`.

- **Tâche `resolveReachabilityMetadata`** — Nouvelle tâche Gradle qui résout les entrées du Oracle Reachability Metadata Repository pour toutes les dépendances du classpath runtime. S'exécute automatiquement avant `packageGraalvmNative`.

- **Inclusion automatique des ressources Compose Multiplatform** — `graalvm-runtime` inclut désormais `composeResources/.*` dans les patterns de ressources de `native-image.properties`, donc toutes les ressources Compose (images, chaînes, polices chargées via `Res.*`) sont incluses automatiquement.

- **Fusion et déduplication de l'agent** — La tâche `runWithNativeAgent` déduplique désormais la sortie de l'agent par rapport aux métadonnées de bibliothèque déjà livrées dans les JARs du classpath. Cela empêche l'agent de tracing de réajouter des entrées que Nucleus (ou d'autres bibliothèques) fournissent déjà, gardant la config spécifique à votre application propre et minimale.

- **Tous les bundles de locale du JDK inclus automatiquement** — Les bundles de ressources spécifiques à une locale font désormais partie des métadonnées centralisées, réduisant les crashs `MissingResourceException` au runtime.

- **Enum `UpdateLevel`** — `UpdateResult.Available` porte désormais un `UpdateLevel` (`MAJOR`, `MINOR`, `PATCH`, `PRE_RELEASE`) calculé en comparant les numéros de version sémantique. Permet à l'UI d'adapter son message selon l'importance de la mise à jour. Voir [Auto Update](/docs/packaging/auto-update#update-level).

- **Détection post-mise à jour** — Les nouvelles méthodes `NucleusUpdater.consumeUpdateEvent()` et `wasJustUpdated()` détectent que l'application vient d'être mise à jour et renvoient un `UpdateEvent` avec `previousVersion`, `newVersion` et `updateLevel`. Utile pour les dialogues « Quoi de neuf », les migrations ou l'analytics. Voir [Auto Update](/docs/packaging/auto-update#post-update-detection).

- **Modules jlink par défaut étendus** — `java.net.http` et `jdk.accessibility` sont désormais inclus dans la liste des modules jlink par défaut aux côtés de `java.base`, `java.desktop`, `java.logging` et `jdk.crypto.ec`. Plus besoin de les ajouter manuellement.

- **Génération automatique des métadonnées de réflexion de la classe main** — Le plugin ajoute désormais automatiquement la classe main de l'application à la configuration de réflexion de l'image native GraalVM, éliminant une étape manuelle.

### Corrections de bugs

- **Élimination du flash de redimensionnement sur `DecoratedDialog` (Windows)** — Ajoute une sous-classe `WndProc` native pour les dialogues qui gère `WM_ERASEBKGND` et `WM_WINDOWPOSCHANGING` pour éviter le flash blanc pendant le redimensionnement du dialogue.
- **Correction de WM_CLASS affichant le nom de classe `LambdaForm` dans GNOME en image native** — Ajoute une substitution `@TargetClass` pour `XToolkit.getAWTAppClassName()` qui renvoie le vrai nom d'application depuis `NucleusApp.appId` au lieu de la classe LambdaForm interne.
- **Correction de l'alias d'exécutable Linux pour la structure d'image native GraalVM** — Prend en charge la structure de répertoire du binaire d'image native lors de la création du symlink d'exécutable.
- **Alignement du WM_CLASS de l'image native avec le `StartupWMClass` du `.desktop`** — Garantit que l'icône de la barre des tâches GNOME correspond au fichier `.desktop`.
- **Génération d'icônes Linux de haute qualité** — Remplace le redimensionnement `Graphics2D` en une seule étape par un sous-échantillonnage bilinéaire progressif avec Thumbnailator, corrigeant les icônes floues dans les packages DEB aux petites tailles (16x16, 32x32).
- **Prévention du crash de repli réflexion en image native** — Quand la bibliothèque JNI est chargée, renvoie directement son résultat sans retomber sur l'accès `sun.awt.AWTAccessor` basé sur la réflexion, qui déclenche une `IllegalAccessException` sous JPMS en image native.
- **Relance de `CancellationException` dans l'updater** — Évite les fuites de scope de coroutine quand les opérations de mise à jour sont annulées.
- **Compatibilité npm 11** — Plusieurs corrections pour les erreurs `ECOMPROMISED` dans les builds parallèles : préfixe npm isolé, fichiers npmrc séparés, garantie de l'existence du répertoire lib du préfixe npm.
- **Correction de la bordure de fenêtre décorée Jewel en mode clair sous Linux** — Utilise une bordure subtile semi-transparente (`Color(0x12FFFFFF)`) sous Linux au lieu de la couleur Jewel opaque `borders.normal`. Sous GNOME/KDE, la bordure de fenêtre se fond désormais dans le chrome de fenêtre natif en mode clair au lieu d'afficher un contour gris disgracieux.

### Changements incompatibles

- **Fichiers `reachability-metadata.json` des applications d'exemple drastiquement réduits** — Si vous avez copié des métadonnées des applications example ou jewel-sample, les fichiers source sont désormais quasiment vides (les entrées du framework ont été déplacées vers L1/L3). Ce n'est pas un changement qui casse le code, mais vous devriez nettoyer vos propres fichiers de métadonnées — voir le [guide de migration](/docs/performance/graalvm#migration-from-v15x).

- **Suppression des fichiers de config à l'ancien format des exemples** — `predefined-classes-config.json`, `proxy-config.json`, `resource-config.json` et `serialization-config.json` ont été supprimés. Toute la configuration est consolidée dans `reachability-metadata.json`.

- **Signature de `UpdateResult.Available` modifiée** — Inclut désormais un champ `level: UpdateLevel`. Si vous déstructurez `UpdateResult.Available`, ajoutez le nouveau champ.

---

## v1.5.9

**Sortie : 2026-03-20**

### Nouvelles fonctionnalités

- **Tâche `runGraalvmNative`** — Nouvelle tâche Gradle qui compile et exécute directement l'image native GraalVM, sans l'empaqueter dans un installeur. Utile pour itérer rapidement pendant le développement.

### Changements incompatibles

- **Suppression du type de build release pour GraalVM** — Les tâches d'image native GraalVM n'ont plus de variantes `release` (`packageReleaseGraalvmNative`, etc.). ProGuard fait doublon avec l'élimination de code mort à monde clos de native-image, et il est nuisible car il peut renommer des classes référencées dans `reachability-metadata.json`. Voir [Pas de type de build release](/docs/performance/graalvm#no-release-build-type).

---

## v1.5.8

**Sortie : 2026-03-20**

### Nouvelles fonctionnalités

- **Inclusion automatique des ressources pour l'image native GraalVM** — `graalvm-runtime` livre désormais un `native-image.properties` qui inclut automatiquement toutes les ressources `.svg`, `.ttf`, `.otf`, les bibliothèques JNI `nucleus/native/*` et les descripteurs `META-INF/services/*` via des patterns glob. Les projets n'ont plus besoin de lancer l'agent de tracing juste pour découvrir les ressources d'icônes et de polices — elles sont embarquées automatiquement dans le binaire natif. L'agent de tracing reste nécessaire pour la réflexion, JNI, les bundles de ressources et les ressources non standard. Voir [Inclusion automatique des ressources](/docs/performance/graalvm#automatic-resource-inclusion).

---

## v1.5.7

**Sortie : 2026-03-20**

### Corrections de bugs

- **Correction du flash de première frame au démarrage maximisé** — Remplace `state.size` par la zone de travail de l'écran (bounds moins les insets de la barre des tâches, à l'échelle DPI) **avant** le composable `Window`, pour que la fenêtre AWT soit créée dès le départ aux bonnes dimensions maximisées. L'approche précédente (`PreSizeIfMaximized` via `DisposableEffect` à l'intérieur de `Window`) s'exécutait trop tard — la première frame Skia avait déjà été rendue à la taille par défaut. Affecte la variante `DecoratedWindow` JNI.

---

## v1.5.6

**Sortie : 2026-03-20**

### Corrections de bugs

- **Correction du flash de première frame au démarrage maximisé** _(remplacé par v1.5.7)_ — Tentative initiale utilisant `DisposableEffect` à l'intérieur de `Window` pour pré-dimensionner la fenêtre AWT.

---

## v1.5.5

**Sortie : 2026-03-19**

### Nouvelles fonctionnalités

- **Ajout de la valeur d'enum `SystemNative` à `ControlButtonsDirection`** — Une nouvelle variante `SystemNative` qui lit la locale native de l'OS depuis les propriétés système de démarrage de la JVM (`user.language`, `user.country`, `user.variant`) au lieu de `Locale.getDefault()`. Contrairement au mode `System` qui reflète la locale par défaut courante de la JVM (modifiable via `Locale.setDefault()`), `SystemNative` est insensible aux surcharges de locale au runtime et reflète toujours la vraie configuration du système d'exploitation. Utile pour les applications qui changent temporairement la locale de l'UI mais veulent que les boutons de contrôle correspondent au sens natif du système.

---

## v1.5.4

**Sortie : 2026-03-19**

### Nouvelles fonctionnalités

- **Ajout de `controlButtonsDirection` à `DialogTitleBar`** — Propage `controlButtonsDirection` dans toute la chaîne `DialogTitleBar` : `DialogTitleBarImpl` (core), implémentations spécifiques à la plateforme (JNI + JBR pour Linux/Windows/macOS) et wrappers thématiques (`JewelDialogTitleBar`, `MaterialDialogTitleBar` Material 2 et Material 3). Aligne les barres de titre de dialogue avec l'API `TitleBar` existante.

---

## v1.5.3

**Sortie : 2026-03-19**

### Corrections de bugs

- **Correction de la position globale des boutons de contrôle quand le contenu et les contrôles partagent le même bord** — Les éléments alignés à la fin (boutons de contrôle) sont désormais placés avant les éléments alignés au début dans la mise en page de la barre de titre. Auparavant, dans les applications RTL avec des boutons de contrôle LTR (ou inversement), le contenu revendiquait le bord en premier, poussant les boutons vers l'intérieur. Affecte toutes les plateformes.

---

## v1.5.2

**Sortie : 2026-03-19**

### Corrections de bugs

- **Synchronisation du sens de mise en page des boutons de contrôle avec `controlButtonsDirection`** — Les boutons de contrôle (fermer, agrandir, réduire) héritent désormais du `controlButtonsDirection` résolu comme `LocalLayoutDirection`. Auparavant, dans les applications RTL avec `ControlButtonsDirection.System`, l'intérieur des boutons était rendu en RTL même si les boutons étaient placés du bon côté. Introduit la composition local `LocalControlButtonsDirection`, consommée par `WindowControlArea` et `WindowsWindowControlArea`.

---

## v1.5.1

**Sortie : 2026-03-19**

### Améliorations

- **Ajout de `controlButtonsDirection` à `JewelTitleBar` et au `MaterialTitleBar` Material 2** — Transmet le paramètre `controlButtonsDirection` au `TitleBar` sous-jacent pour que les consommateurs puissent contrôler le placement des boutons de fenêtre indépendamment du sens de mise en page du contenu. Le `MaterialTitleBar` Material 3 avait déjà ce paramètre ; Jewel et Material 2 sont désormais alignés.

---

## v1.5.0

**Sortie : 2026-03-19**

### Nouvelles fonctionnalités

- **Prise en charge automatique de Liquid Glass via `macOsSdkVersion`** — Nucleus patche désormais automatiquement l'en-tête Mach-O `LC_BUILD_VERSION` du launcher de l'application vers le SDK macOS 26.0 avec `vtool`, activant les décorations de fenêtre Liquid Glass (feux de circulation plus grands, coins arrondis). Cela fonctionne avec **n'importe quel JDK** — un JDK compilé avec Xcode 26 n'est plus requis. La tâche `run` utilise une copie patchée mise en cache de la JVM, tandis que les builds distribuables patchent le launcher avant la signature. Contrôlé via `macOS { macOsSdkVersion = "26.0" }` (activé par défaut, mettez `null` pour désactiver). Nécessite les Xcode Command Line Tools. Voir [Apparence de fenêtre macOS 26](/docs/packaging/macos#macos-26-window-appearance-liquid-glass).
- **`Modifier.clientRegion()` pour le hit testing de la barre de titre JBR** — Nouvelle fonction de modifier qui enregistre des éléments composables comme régions client interactives dans la barre de titre d'une `DecoratedWindow`. Les régions client reçoivent les événements souris (clics, appuis) au lieu de déclencher le drag de la fenêtre. Utilise des listeners souris au niveau AWT avec un hit testing précis basé sur les coordonnées, remplaçant l'ancien `customTitleBarMouseEventHandler` basé sur les pointer events. Voir [Decorated Window](/docs/window).
- **Module `decorated-window-jewel`** — Nouveau module fournissant l'intégration du thème Jewel pour `DecoratedWindow`. Utilisé par l'application jewel-sample.
- **Module `decorated-window-material2`** — Nouveau module fournissant le mapping de couleurs du thème Material 2 pour `DecoratedWindow`, complétant le module Material 3 existant.
- **Module `decorated-window-material3`** — Renommé depuis `decorated-window-material` pour plus de clarté. Fournit le mapping de couleurs Material 3 pour `DecoratedWindow`.
- **Découplage du sens des boutons de contrôle du sens du contenu de la barre de titre** — Les boutons de contrôle de fenêtre (fermer, réduire, agrandir) suivent désormais leur position native à la plateforme, indépendamment du sens de mise en page de la barre de titre.
- **Interception des événements de quit système** — `onCloseRequest` dans `DecoratedWindow` intercepte désormais les événements Cmd+Q et quit du Dock macOS, donnant à l'application une chance de confirmer ou d'annuler la fermeture.
- **Slot `backgroundContent` dans `TitleBar`** — Nouveau slot composable pour rendre du contenu derrière la barre de titre (par exemple un dégradé ou un fond flouté).
- **Remontée des détails de notarisation en cas d'échec** — Les erreurs de notarisation incluent désormais l'ID de soumission Apple et l'URL du log pour faciliter le débogage.

### Corrections de bugs

- **Correction du drag de la barre de titre sous Windows (`decorated-window-jbr`)** — Le drag de fenêtre via la barre de titre n'échoue plus occasionnellement à la première tentative quand une autre fenêtre a le focus. La nouvelle approche `WindowMouseEventEffect` utilise des listeners souris AWT pour un transfert fiable du hit-test vers le `CustomTitleBar` de JBR, corrigeant les événements de drag intermittents manqués. ([#53](https://github.com/NucleusFramework/Nucleus/issues/53))
- Promeut `core-runtime` en scope `api` dans `updater-runtime` et `system-color` pour que les consommateurs n'aient plus à le déclarer séparément.
- Inclut le provider generic dans la détection du mode de publication.
- Ignore l'empaquetage Flatpak en douceur quand le CLI `flatpak` est absent.
- Utilise le flag sandboxed pour jpackage `macAppStore` au lieu de se baser sur `targetFormat`.
- Propage les entrées de contenu DMG au build universel de la CI.
- Compense la hauteur de la barre de titre macOS dans l'image de fond DMG.
- Migre des icônes `painterResource` dépréciées vers les icônes `ImageVector`.
- Remplace les accesseurs Compose dépréciés par les entrées du version catalog.
- Ajoute les annotations de mise en cache et de normalisation de tâche Gradle 9.4 à toutes les classes de tâche.

### Dépréciations

- **`decorated-window-material` renommé** — Utilise `decorated-window-material3` à la place.

---

## v1.4.8

**Sortie : 2026-03-18**

### Nouvelles fonctionnalités

- **Interception des événements de quit système via `onCloseRequest`** — `DecoratedWindow` intercepte désormais les événements Cmd+Q et quit du Dock macOS.
- **Remontée de l'ID de soumission de notarisation et du log Apple en cas d'échec** — Débogage plus facile des problèmes de notarisation.

### Corrections de bugs

- **Drag fiable de la barre de titre via le hit testing `clientRegion` au niveau AWT** — Corrige les événements de drag intermittents manqués sous Windows quand une autre fenêtre a le focus.
- Promeut `core-runtime` en scope `api` dans `updater-runtime` et `system-color`.
- Inclut le provider generic dans la détection du mode de publication.
- Ignore l'empaquetage Flatpak en douceur quand le CLI `flatpak` est absent.
- Utilise le flag sandboxed pour jpackage `macAppStore` au lieu de `targetFormat`.

---

## v1.4.7

**Sortie : 2026-03-11**

### Nouvelles fonctionnalités

- **Slot `backgroundContent` dans `TitleBar` et `MaterialTitleBar`** — Nouveau slot composable pour rendre du contenu derrière la barre de titre (par exemple un dégradé ou un fond flouté).

---

## v1.4.6

**Sortie : 2026-03-11**

### Corrections de bugs

- **Correction du crash `objc_retain` sur une `NSWindow` libérée pendant la disposition** — Évite le crash quand le runtime Objective-C tente de retenir une référence de `NSWindow` déjà désallouée depuis un callback JNI.

---

## v1.4.5

**Sortie : 2026-03-10**

### Corrections de bugs

- **Correction du crash sur une référence `__weak` de `NSWindow` depuis un thread JNI pendant la disposition** — Évite le crash quand une référence faible à `NSWindow` est accédée depuis un thread JNI après la désallocation de la fenêtre.

---

## v1.4.4

**Sortie : 2026-03-10**

### Corrections de bugs

- **Correction du crash au nettoyage de `NSWindow` pendant une transition plein écran** — Évite le crash quand la fenêtre est nettoyée alors qu'une animation plein écran est encore en cours.

---

## v1.4.3

**Sortie : 2026-03-10**

### Nouvelles fonctionnalités

- **Comportement de barre de titre plein écran à la Safari sous macOS** — La barre de titre plein écran se rend comme un overlay translucide qui pousse le contenu vers le bas, à l'image du comportement natif de Safari.
- **Détection du type et de la version d'exécutable pour les builds d'image native GraalVM** — `ExecutableType` identifie désormais correctement les binaires natifs GraalVM et leur version.

### Corrections de bugs

- Active le suivi des redirections dans `NativeHttpClient` et ajoute la lib SSL aux ressources de native-image.

---

## v1.4.2

**Sortie : 2026-03-10**

### Corrections de bugs

- **Renforcement de la gestion de l'état plein écran sous Windows** — Corrige plusieurs problèmes liés au plein écran :
    - Améliore la restauration de l'état de sortie de plein écran et la gestion de l'agrandissement.
    - Surcharge le placement du delegate à la sortie de plein écran avec l'état sauvegardé.
    - Restaure le placement correct à la sortie de plein écran et élimine le glitch d'agrandissement.
    - Restaure les événements de pointeur vers la zone de contenu en mode plein écran.

---

## v1.4.1

**Sortie : 2026-03-10**

### Corrections de bugs

- Ajoute les règles ProGuard manquantes pour `system-color`, `energy-manager` et `linux-hidpi`.
- Applique `macOSLargeCornerRadius` à la barre de titre de jewel-sample.
- Met à jour les métadonnées de reachability GraalVM pour macOS.

---

## v1.4.0

**Sortie : 2026-03-09**

### Nouvelles fonctionnalités

- **Plein écran natif avec barre de titre coulissante** — Expérience plein écran native à la plateforme : à la Safari sous macOS, à la Edge sous Windows, à la Firefox sous Linux. Quand la fenêtre passe en plein écran, la barre de titre devient un overlay flottant qui glisse vers le bas au survol près du bord supérieur et remonte quand le pointeur s'éloigne. Active avec `Modifier.newFullscreenControls()` sur `TitleBar` / `MaterialTitleBar`. Voir [Decorated Window](/docs/window).
- **Grand rayon de coin macOS** — Le nouveau modifier `Modifier.macOSLargeCornerRadius()` applique le rayon de coin de fenêtre de 26pt utilisé par Finder et Safari. Installe une `NSToolbar` invisible et repositionne les boutons de feux de circulation pour correspondre à l'inset natif d'Apple. Voir [Decorated Window](/docs/window).
- **Module System Color** (`nucleus.system-color`) — Détection réactive de la couleur d'accentuation de l'OS et du mode contraste élevé via JNI. Prend en charge macOS (`NSColor.controlAccentColor`), Windows (registre DWM) et Linux (XDG Desktop Portal D-Bus). API composables : `systemAccentColor()`, `isSystemInHighContrast()`. Voir [System Color](/docs/os/system-color).
- **Module Energy Manager** (`nucleus.energy-manager`) — Gestion de l'énergie à trois niveaux : mode pleine efficacité (EcoQoS + IDLE_PRIORITY_CLASS sous Windows, `PRIO_DARWIN_BG` + task_policy_set sous macOS, nice +19/ioprio/timerslack sous Linux), mode efficacité légère (dépriorisation CPU seulement, sans throttling I/O) et mode efficacité au niveau thread. Inclut une API de veille écran (caffeine) pour empêcher la mise en veille de l'affichage (IOPMAssertion sous macOS, SetThreadExecutionState sous Windows, D-Bus/X11 sous Linux). Helpers de coroutine : `withEfficiencyMode()`, `withLightEfficiencyMode()`. Voir [Energy Manager](/docs/lifecycle/energy-manager).
- **Centrage automatique de `DecoratedDialog` sur la fenêtre parente** — Les dialogues sont désormais centrés automatiquement sur leur parent avec un positionnement fiable via l'événement `windowOpened`. Voir [Decorated Window](/docs/window).
- **Prise en charge des feux de circulation RTL sous macOS** — Positionnement correct des boutons de feux de circulation dans les mises en page de droite à gauche. Voir [Decorated Window](/docs/window).
- **Chargement centralisé des bibliothèques natives** — Le nouveau `NativeLibraryLoader` avec cache persistant remplace la logique de chargement par module.
- **Contrôles de fenêtre conscients du plein écran** — Le bouton d'agrandissement affiche une icône de sortie de plein écran en mode plein écran sous Linux et Windows, avec de nouvelles variantes d'icônes SVG (active/inactive/sombre). Voir [Decorated Window](/docs/window).
- **Synchronisation du fond de fenêtre AWT sous macOS** — L'application idempotente des propriétés évite les déclenchements redondants de `PropertyChangeEvent`, réduisant le jitter visuel pendant les passes de layout.
- **Module Sample CMP** (`sample-cmp`) — Nouvel exemple Kotlin Multiplatform Compose avec des targets Android et Desktop.
- **Galerie de l'application d'exemple** — Vitrine de composants Material 3 avec écrans d'actions, communication, containment, sélection, saisies de texte, typographie, élévation et couleur.

### Corrections de bugs

- **Correction du plein écran Windows** — Compose for Desktop ne gère pas correctement le plein écran sous Windows (la fenêtre ne couvre pas la barre des tâches). Utilise désormais les API Win32 natives pour un vrai plein écran, à l'image d'Edge et des autres applications Windows natives.
- **Élimination du flash blanc de redimensionnement sous Windows** — Ajuste la couleur de clear de Skiko en transparent pour les thèmes sombres et synchronise les couleurs de caption/bordure DWM pour un chrome de fenêtre Windows 11 cohérent.
- **Ignorer les configurations Android dans `CleanNativeLibsTransform`** — Corrige les problèmes de build quand des targets Android sont présentes. ([#79](https://github.com/NucleusFramework/ComposeDeskKit/issues/79))
- **Ignorer le stapling ZIP pour préserver le blockmap** — Évite de casser l'intégrité du blockmap d'auto-update pendant la notarisation. ([#70](https://github.com/NucleusFramework/ComposeDeskKit/issues/70))
- **Détection de l'architecture cible depuis le fichier release du JDK pour le cross-build** — Corrige la détection d'architecture lors de la compilation croisée. ([#71](https://github.com/NucleusFramework/ComposeDeskKit/issues/71))
- Déplace la surveillance du mode sombre Windows sur un thread natif pour plus de fiabilité.
- Corrige le parsing de la variant D-Bus `ReadOne` pour la couleur d'accentuation Linux.

### Dépréciations

- **Propriété `appStore` dépréciée** — Les distributions PKG sont désormais toujours traitées comme des builds App Store. La propriété `appStore` n'est plus nécessaire. ([#65](https://github.com/NucleusFramework/ComposeDeskKit/issues/65))

---

## v1.3.8

**Sortie : 2026-03-02**

### Corrections de bugs

- Aligne l'espacement des boutons de feux de circulation macOS natifs.

---

## v1.3.7

**Sortie : 2026-03-02**

### Corrections de bugs

- Gère le stapling ZIP en extrayant le `.app`, en le staplant et en le re-zippant.
- Retire le réglage DMG déprécié `internetEnabled`.

---

## v1.3.6

**Sortie : 2026-03-02**

### Corrections de bugs

- Corrige les transitions et l'alignement des boutons de plein écran.
- Restaure l'apparence de la barre de titre avant l'animation de sortie de plein écran.
- Retombe sur l'icône par défaut pour l'image native GraalVM sous Windows.
- Met à jour les checksums et tailles de fichier de `latest-mac.yml` après notarisation.
- Retire `xvfb-run` du workflow test-graalvm (Xvfb déjà démarré par `setup-nucleus`).

---

## v1.3.5

**Sortie : 2026-03-02**

### Corrections de bugs

- Ajoute `homepage` aux `nativeDistributions` de jewel-sample pour l'empaquetage DEB electron-builder.

---

## v1.3.4

**Sortie : 2026-03-02**

### Corrections de bugs

- Retire `xvfb-run` du workflow graalvm (Xvfb déjà démarré par `setup-nucleus`).

---

## v1.3.3

**Sortie : 2026-03-02**

### Nouvelles fonctionnalités

- Ajoute l'option `graalvm` à l'action composite `setup-nucleus`.
- Configure la signature de code Windows pour jewel-sample avec un certificat partagé.

### Corrections de bugs

- Ajoute `libx11-dev` et `libdbus-1-dev` aux dépendances Linux de la release graalvm.
- Configure les `nativeDistributions` de jewel-sample avec les icônes, le mainteneur deb et les réglages de plateforme.
- Utilise les tâches `packageGraalvmDeb`/`Dmg`/`Nsis` au lieu de la sortie brute de l'image native.

---

## v1.3.2

**Sortie : 2026-03-02**

Aucun changement visible pour l'utilisateur (tag uniquement).

---

## v1.3.1

**Sortie : 2026-03-02**

### Corrections de bugs

- Utilise les tâches `packageGraalvmDeb`/`Dmg`/`Nsis` au lieu de la sortie brute de l'image native.
- Ajoute les téléchargements d'artefacts natifs manquants et `libx11-dev` au workflow publish-plugin.
- Passe le repository aux commandes `gh release` dans le workflow graalvm.
- Retire les icônes personnalisées de jewel-sample, utilise les icônes par défaut à la place.

---

## v1.3.0

**Sortie : 2026-03-02**

### Nouvelles fonctionnalités

- **Prise en charge de GraalVM Native Image (expérimental)** — Compile les applications Compose Desktop en binaires natifs autonomes avec un cold boot rapide (~0,5 s), une empreinte mémoire moindre (~100–150 Mo contre ~300–400 Mo sur JVM) et des bundles plus petits. Nouveau bloc DSL `graalvm {}`, tâche `runWithNativeAgent` pour la collecte des métadonnées de réflexion, et tâches d'empaquetage `packageGraalvmNative` / `packageGraalvmDeb` / `packageGraalvmDmg` / `packageGraalvmNsis`. Nécessite [BellSoft Liberica NIK 25](https://bell-sw.com/liberica-native-image-kit/). Voir [GraalVM Native Image](/docs/performance/graalvm).
- **Nouveau module `graalvm-runtime`** (`nucleus.graalvm-runtime`) — Centralise la logique de bootstrap de l'image native dans un seul appel `GraalVmInitializer.initialize()` : Metal L&F, configuration de `java.home`/`java.library.path`, init précoce du charset/fontmanager, détection HiDPI Linux et substitutions de police GraalVM `@TargetClass` pour Windows et Linux.
- **Découpage du module Decorated Window** — `decorated-window` découpé en `decorated-window-core`, `decorated-window-jbr` (basé sur JBR, même comportement qu'avant) et `decorated-window-jni` (sans JBR, fonctionne avec GraalVM). Voir le [Guide de migration](#migration-guide-12x--13x) ci-dessous.
- **Module `decorated-window-jni`** — Nouvelle implémentation JNI de `DecoratedWindow` qui fonctionne sans JetBrains Runtime, y compris la prise en charge de Linux via un pont JNI natif. Compatible avec GraalVM Native Image.
- **Prise en charge du scaling HiDPI Linux** — Gestion native de `GDK_SCALE` pour un rendu correct sur les affichages Linux HiDPI.
- **Notarisation automatique des distributions macOS** — `packageDistributionForCurrentOS` notarise désormais automatiquement sous macOS quand les identifiants de notarisation sont configurés.
- **Application Jewel Sample** — Vitrine d'UI Jewel autonome avec CI d'image native GraalVM, empaquetage spécifique à la plateforme et signature de code Windows.

### Corrections de bugs

- Remplace `OBJC_ASSOCIATION_ASSIGN` par `RETAIN_NONATOMIC` pour éviter un pointeur pendouillant sous macOS.
- Résout le chargement du fontmanager en image native Linux.
- Garantit que la bibliothèque Skiko est extraite et chargée en GraalVM Native Image.
- Utilise `onlyIf` au lieu de `enabled` pour les tâches de build natif (compatibilité configuration cache).
- Détecte les double-clics non consommés avant de déclencher le zoom macOS.

### Documentation

- Guide GraalVM Native Image pour Compose Desktop.
- Guide de l'apparence de fenêtre macOS 26 pour la JVM et l'image native.
- Documentation du runtime HiDPI Linux.
- Réécriture de la documentation du cache AOT avec motivation et référence à Project Leyden.
- Mise à jour de la documentation decorated window avec changelog et guide de migration.

### CI/CD

- Workflow de build d'image native GraalVM pour la CI de PR.
- Workflow CI pour publier Jewel Sample en image native GraalVM sur les tags.
- Migration de detekt vers 2.0.0-alpha.2 pour la prise en charge de JDK 25.

---

## Guide de migration : 1.2.x → 1.3.x

### Decorated window : découpage du module monolithique

Le module `decorated-window` a été découpé en trois modules :

| Avant (1.2.x) | Après (1.3.x) |
|---|---|
| `nucleus.decorated-window` | `nucleus.decorated-window-core` (partagé) |
| | `nucleus.decorated-window-jbr` (implémentation JBR) |
| | `nucleus.decorated-window-jni` (implémentation JNI, nouveau) |

**Mise à jour de la dépendance** — remplace :

```kotlin
implementation("dev.nucleusframework:nucleus.decorated-window:<version>")
```

Par l'une de :

```kotlin
// Basé sur JBR (même comportement qu'avant)
implementation("dev.nucleusframework:nucleus.decorated-window-jbr:<version>")

// Basé sur JNI (sans dépendance JBR, fonctionne avec GraalVM)
implementation("dev.nucleusframework:nucleus.decorated-window-jni:<version>")
```

**Changements incompatibles dans `TitleBarColors`** — les champs suivants ont été **supprimés** :

- `titlePaneButtonHoveredBackground`
- `titlePaneButtonPressedBackground`
- `titlePaneCloseButtonHoveredBackground`
- `titlePaneCloseButtonPressedBackground`

Ces couleurs d'état de bouton spécifiques à la plateforme sont désormais gérées en interne par l'implémentation native de chaque module. Si vous construisiez `TitleBarColors` explicitement avec ces champs, retirez-les.

**Aucun autre changement de code requis** — toutes les API composables (`DecoratedWindow`, `DecoratedDialog`, `TitleBar`, `DialogTitleBar`), scopes et types d'état sont identiques. Aucun changement d'import nécessaire — le package reste `dev.nucleusframework.window`.

Voir [Decorated Window](/docs/window) pour tous les détails sur le choix entre JBR et JNI.

---

## v1.2.7

**Sortie : 2026-02-22**

### Corrections de bugs

- Utilise des archives winCodeSign par plateforme pour corriger le build AppX sous Windows.

---

## v1.2.6

**Sortie : 2026-02-22**

### Corrections de bugs

- Préserve les entitlements de sandbox lors de la re-signature du PKG pour l'App Store sans certificat.

---

## v1.2.5

**Sortie : 2026-02-22**

### Corrections de bugs

- Mappe `PublishMode.Auto` vers `"onTag"` pour electron-builder.

---

## v1.2.4

**Sortie : 2026-02-22**

### Corrections de bugs

- Ajoute les étapes de build et de publication macOS natif de decorated-window à la CI.

---

## v1.2.3

**Sortie : 2026-02-21**

### Corrections de bugs

- Arrondit les coins inférieurs de la fenêtre décorée sous GNOME.
- Utilise la signature Developer ID pour les formats DMG/ZIP afin de passer la notarisation.

---

## v1.2.2

**Sortie : 2026-02-20**

### Nouvelles fonctionnalités

- **Provider de publication generic** — Nouveau provider `generic` pour les serveurs de mise à jour auto-hébergés, aux côtés de GitHub et S3. Voir [Auto-Update](/docs/packaging/auto-update).

---

## v1.2.1

**Sortie : 2026-02-20**

### Corrections de bugs

- Évite le crash quand aucun provider de publication n'est configuré dans electron-builder.

---

## v1.2.0

**Sortie : 2026-02-20**

### Nouvelles fonctionnalités

- **Module Native SSL** (`nucleus.native-ssl`) — Charge les certificats de confiance de l'OS via JNI : Keychain macOS (`SecTrustCopyAnchorCertificates`), Crypt32 Windows, chemins de certificats système Linux. S'aligne sur le `jvm-native-trusted-roots` de JetBrains. Inclut une vérification cryptographique `isSelfSigned` sous macOS. Voir [Native SSL](/docs/performance/native-ssl).
- **Modules Native HTTP** (`nucleus.native-http`, `nucleus.native-http-okhttp`, `nucleus.native-http-ktor`) — Clients HTTP qui utilisent le trust store de l'OS prêts à l'emploi, avec des adaptateurs OkHttp et Ktor. Voir [Native HTTP](/docs/performance/native-http).
- **Patch des certificats CA** — Une nouvelle tâche au moment du build patche le `cacerts` de la JVM avec les certificats de confiance de l'OS.
- **Règles ProGuard keep JNI** — Le template ProGuard par défaut inclut désormais des règles keep pour `native-ssl`.

### Documentation

- Ajoute la documentation des modules native-ssl et native-http.
- Met à jour la comparaison avec les détails du patch des certificats CA et du SSL natif.

---

## v1.1.6

**Sortie : 2026-02-20**

### Nouvelles fonctionnalités

- Définit `artifactName` par défaut à `${name}-${version}-${os}-${arch}.${ext}` pour un nommage cohérent.

### Corrections de bugs

- Préserve les symlinks lors de la copie de l'app image sous macOS.
- Isole l'app image et le cache electron-builder par tâche.
- Ajoute un workflow de test d'empaquetage de PR pour toutes les plateformes.

---

## v1.1.4

**Sortie : 2026-02-19**

### Corrections de bugs

- Isole le cache npm par tâche pour éviter les `EPERM` sur les builds parallèles.
- Résout l'erreur de sérialisation du configuration cache pour le pipeline sandboxed.

---

## v1.1.3

**Sortie : 2026-02-19**

### Corrections de bugs

- Passe `setup-node` à `true` par défaut et retire le contournement du cache npm.

---

## v1.1.2

**Sortie : 2026-02-19**

### Corrections de bugs

- Nettoie le cache npm sur les runners Windows pour éviter les erreurs `ECOMPROMISED`.
- N'active le pipeline sandboxed que pour les formats de store compatibles avec l'OS.

### Documentation

- Ajoute une note sur le changement d'import de `TargetFormat` (de `compose` vers `nucleus`) au guide de migration.
- Ajoute la documentation des règles ProGuard pour les bibliothèques JNI.
- Ajoute la documentation LLM (`llms.txt`, `llms-full.txt`).
- Ajoute une page de comparaison des outils d'empaquetage.

---

## v1.1.1

**Sortie : 2026-02-19**

### Corrections de bugs

- Descelle le JAR `jbr-api` pour éviter une violation de scellement au démarrage.

---

## v1.1.0

**Sortie : 2026-02-19**

### Nouvelles fonctionnalités

- **Module Decorated Window** (`nucleus.decorated-window`) — Décorations de fenêtre personnalisées avec barres de titre natives, boutons de feux de circulation sous macOS, contrôles de fenêtre sous Windows (fermer/réduire/agrandir) et style GNOME/KDE sous Linux. Remplace JNA/Unsafe par un pont JNI Objective-C sous macOS. Voir [Decorated Window](/docs/window).
- **Module de thème Material** (`nucleus.decorated-window-material`) — Mapping de couleurs Material 3 automatique pour `DecoratedWindow`.
- **Module Darkmode Detector** (`nucleus.darkmode-detector`) — Détection réactive du mode sombre de l'OS via JNI sous macOS, Windows et Linux (XDG Desktop Portal). Remplace l'implémentation basée sur JNA par du JNI pur pour des binaires plus petits et aucune dépendance externe. Voir [Darkmode Detector](/docs/os/dark-mode).
- **Prise en charge de la mise en page RTL** — La barre de titre respecte le sens de mise en page de droite à gauche avec des icônes de bascule dédiées.
- **Style de fenêtre KDE Breeze** — Jeu d'icônes dédié, rayon de coin et états survolé/pressé correspondant à KDE Plasma.
- **Style de fenêtre GNOME** — Coins arrondis, bordure subtile et style de barre de titre inactive correspondant à GNOME/Adwaita.

### Corrections de bugs

- Dispatche les appels AppKit sur le thread principal dans le pont JNI.
- Masque la bordure quand la fenêtre est agrandie dans n'importe quelle direction ou remplit l'écran.
- Utilise une forme de bordure arrondie correspondant aux coins de fenêtre GNOME/KDE.

---

## v1.0.9

**Sortie : 2026-02-18**

### Corrections de bugs

- Aplatit l'extraction des libs natives vers la racine des ressources pour les builds sandboxed.

---

## v1.0.8

**Sortie : 2026-02-18**

### Corrections de bugs

- Déplace les dylibs natives vers `Contents/Frameworks/` pour les builds macOS sandboxed.
- Place les libs natives d'architecture universelle à la racine des ressources.

---

## v1.0.7

**Sortie : 2026-02-18**

### Corrections de bugs

- Évite les collisions de noms de fichier JAR dans le pipeline sandboxed.
- Signe `jspawnhelper` en ad-hoc au lieu de retirer la signature.

---

## v1.0.6

**Sortie : 2026-02-18**

### Corrections de bugs

- Injecte `application-identifier` pour la signature App Store et corrige le configuration cache.

---

## v1.0.5

**Sortie : 2026-02-17**

### Corrections de bugs

- Contourne electron-builder pour la signature PKG App Store.
- Utilise l'identité d'installeur complète pour la signature PKG.

---

## v1.0.4

**Sortie : 2026-02-17**

### Corrections de bugs

- Re-signe l'app macOS après modification du `.cfg` pour les builds PKG.
- Utilise des entitlements sandboxed séparés pour la signature PKG App Store.

---

## v1.0.3

**Sortie : 2026-02-17**

### Corrections de bugs

- Retire le préfixe de certificat de l'identité PKG pour electron-builder.

---

## v1.0.2

**Sortie : 2026-02-17**

### Nouvelles fonctionnalités

- **`installAndQuit()`** — API de mise à jour silencieuse en arrière-plan qui installe la mise à jour et quitte sans redémarrer.

---

## v1.0.1

**Sortie : 2026-02-17**

### Corrections de bugs

- Résout les échecs de sérialisation du configuration cache Gradle.
- Dérive la version du plugin depuis le tag Git au lieu de `gradle.properties`.
- Déplace `installationPath` vers le DSL macOS uniquement.

---

## v1.0.0

**Sortie : 2026-02-17**

Première release — fork du plugin Gradle JetBrains Compose Desktop, réempaqueté sous le nom **Nucleus** avec des fonctionnalités d'empaquetage, de distribution et de runtime étendues.

### Empaquetage et distribution

- **Backend electron-builder** — Formats DMG, PKG, NSIS, NSIS Web, AppImage, DEB, RPM, Snap et AppX. Remplace jpackage pour la génération d'installeurs.
- **Signature de code et notarisation macOS** — Signature Developer ID et App Store, notarisation automatique via `notarytool`.
- **App Sandbox macOS** — Builds PKG sandboxed avec extraction de bibliothèque JNI, gestion des entitlements et profils de provisioning.
- **Signature de code Windows** — Intégration SignTool avec hachage SHA-256.
- **Empaquetage AppX** — Empaquetage Windows Store avec assets de tuile et configuration d'identité.
- **Personnalisation DMG** — Images de fond, positionnement des icônes, taille de fenêtre, icônes de badge et sélection de format.
- **Icônes en couches** — Prise en charge des répertoires `.icon` macOS 26+ pour les effets dynamiques de tilt/profondeur.
- **Écran de démarrage** — Prise en charge d'une image de splash dans le launcher JVM.
- **Binaires macOS universels** — Workflow CI pour les binaires fat basés sur `lipo` (Apple Silicon + Intel).
- **DSL typé** — Des enums pour les formats de target, les modes de publication et les réglages de compression remplacent les chaînes brutes.
- **Options d'empaquetage Linux** — `startupWMClass`, `debDepends`, `rpmRequires`, `debCompression`, `rpmCompression`, scripts après installation et suffixes d'architecture.
- **Associations de fichiers** — Injection `CFBundleURLTypes` macOS et prise en charge des associations de fichiers Linux/Windows via electron-builder.

### Modules runtime

- **`core-runtime`** — Détection du type d'exécutable, identification de plateforme, `SingleInstanceManager`, `DeepLinkHandler`.
- **`aot-runtime`** — Détection du mode de cache AOT pour JDK 25+ (Project Leyden). Tâche de génération de cache AOT avec timeout de sécurité.
- **`updater-runtime`** — Moteur d'auto-update avec providers GitHub et S3. Vérification SHA-512, suivi de progression, `installAndRestart()`. Stratégies d'installation spécifiques à la plateforme : script shell détaché sous macOS, PowerShell en arrière-plan sous Windows, remplacement AppImage sous Linux.

### Build et CI

- **Actions composites** — Actions `setup-nucleus`, `update-yml` et de publication de release.
- **Workflow de release multiplateforme** — macOS (arm64 + x64 + universel), Windows (x64 + arm64), Linux (x64 + arm64).
- **Prise en charge du configuration cache** — Compatibilité complète avec le configuration cache Gradle.
- **Version du plugin depuis le tag Git** — Aucune gestion manuelle de version dans `gradle.properties`.

## Et ensuite

- [Migrer depuis 1.x](/docs/migrate/from-1.x) — l'id du plugin, le namespace et les changements d'API pour la montée en 2.0.
- [Quickstart](/docs/start/quickstart) — compilez et lancez votre première application Nucleus.
- [GraalVM Native Image](/docs/performance/graalvm) — le pipeline d'image native référencé tout au long de ces notes.
- [Auto-update](/docs/packaging/auto-update) — les API de l'updater mentionnées dans plusieurs releases.
